--- a/Actividades/Practica/public_html/index.html
+++ b/Actividades/Practica/public_html/index.html
@@ -3,10 +3,8 @@
 
 <title>Learning WebGL &mdash; lesson 8</title>
 
-<script type="text/javascript" src="sylvester.js"></script>
 </head>
 
-<script type="text/javascript" src="glUtils.js"></script>
 <script type="text/javascript" src="blender-cube.js"></script>
 <script type="text/javascript" src="glMatrix-0.9.5.min.js"></script>
 
@@ -126,25 +124,11 @@
 
     function setMatrixUniforms() {
         gl.uniformMatrix4fv(shaderProgram.pMatrixUniform, false, pMatrix);
-    gl.uniformMatrix4fv(shaderProgram.mvMatrixUniform, false, new Float32Array(mvMatrix.flatten()));
+        gl.uniformMatrix4fv(shaderProgram.mvMatrixUniform, false, mvMatrix);
     }
 
-    function loadIdentity() {
-    mvMatrix = Matrix.I(4);
-  }
 
-  function multMatrix(m) {
-    mvMatrix = mvMatrix.x(m);
-  }
-  function mvTranslate(v) {
-    var m = Matrix.Translation($V([v[0], v[1], v[2]])).ensure4x4();
-    multMatrix(m);
-  }
-  function mvRotate(ang, v) {
-    var arad = ang * Math.PI / 180.0;
-    var m = Matrix.Rotation(arad, $V([v[0], v[1], v[2]])).ensure4x4();
-    multMatrix(m);
-  }
+
     var figureVertexPositionBuffer;
     var figureVertexTextureCoordBuffer;
     var figureVertexIndexBuffer;
@@ -194,11 +178,12 @@
 
         mat4.perspective(40, gl.viewportWidth / gl.viewportHeight, 0.1, 100.0, pMatrix);
 
-    loadIdentity();
+        mat4.identity(mvMatrix); 
 
-        mat4.translate(pMatrix, [-8.0, 0.0, -20.0]); 
-    mvTranslate([0.0, 0.0, -50.0])
-        
+        mat4.translate(pMatrix, [-8.0, 0.0, 0.0]); 
+		mat4.translate(mvMatrix, [0.0, 0.0, -50.0]); 
+		
+        mat4.rotate(mvMatrix, degToRad(xRot), [1, 0, 0]);
    //- mvRotate(xRot, [1, 0, 0]);
    //- mvRotate(yRot, [0, 1, 0]);
    //- mvRotate(zRot, [0, 0, 1]);
