--- a/Actividades/Practica/public_html/index.html
+++ b/Actividades/Practica/public_html/index.html
@@ -184,9 +184,8 @@
 		mat4.translate(mvMatrix, [0.0, 0.0, -50.0]); 
 		
         mat4.rotate(mvMatrix, degToRad(xRot), [1, 0, 0]);
-   //- mvRotate(xRot, [1, 0, 0]);
-   //- mvRotate(yRot, [0, 1, 0]);
-   //- mvRotate(zRot, [0, 0, 1]);
+        mat4.rotate(mvMatrix, degToRad(yRot), [0, 1, 0]);
+        mat4.rotate(mvMatrix, degToRad(zRot), [0, 0, 1]);
         
         mvPushMatrix();
         
